; ModuleID = '/home/carl/AnghaBench/postgres/contrib/intarray/extr__int_tool.c_intarray_match_first.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/intarray/extr__int_tool.c_intarray_match_first.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @intarray_match_first(i32* %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @CHECKARRVALID(i32* %9)
  %11 = load i32*, i32** %4, align 8
  %12 = call i64 @ARRNELEMS(i32* %11)
  store i64 %12, i64* %7, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i64* @ARRPTR(i32* %13)
  store i64* %14, i64** %6, align 8
  store i64 0, i64* %8, align 8
  br label %15

15:                                               ; preds = %30, %2
  %16 = load i64, i64* %8, align 8
  %17 = load i64, i64* %7, align 8
  %18 = icmp ult i64 %16, %17
  br i1 %18, label %19, label %33

19:                                               ; preds = %15
  %20 = load i64*, i64** %6, align 8
  %21 = load i64, i64* %8, align 8
  %22 = getelementptr inbounds i64, i64* %20, i64 %21
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* %5, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %29

26:                                               ; preds = %19
  %27 = load i64, i64* %8, align 8
  %28 = add i64 %27, 1
  store i64 %28, i64* %3, align 8
  br label %34

29:                                               ; preds = %19
  br label %30

30:                                               ; preds = %29
  %31 = load i64, i64* %8, align 8
  %32 = add i64 %31, 1
  store i64 %32, i64* %8, align 8
  br label %15

33:                                               ; preds = %15
  store i64 0, i64* %3, align 8
  br label %34

34:                                               ; preds = %33, %26
  %35 = load i64, i64* %3, align 8
  ret i64 %35
}

declare dso_local i32 @CHECKARRVALID(i32*) #1

declare dso_local i64 @ARRNELEMS(i32*) #1

declare dso_local i64* @ARRPTR(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
